Updated maps widget

--- a/contactus.html
+++ b/contactus.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+`<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">
 <head profile="http://gmpg.org/xfn/11">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -309,7 +309,7 @@ VISIT US AT OUR GATHERINGS</span></h3>
             </form> 
         </div> <!-- #search-bar --> 
      </div>
-<div class="widget"><h3>Meeting Halls</h3>			<div class="textwidget"><iframe width="225" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps/ms?vpsrc=6&amp;ctz=240&amp;ie=UTF8&amp;msa=0&amp;msid=208296092909134711469.0004af8b89ccf19cf64ee&amp;t=m&amp;ll=42.383148,-71.125145&amp;spn=0.088759,0.077248&amp;z=12&amp;output=embed"></iframe><br/><small>View <a href="http://maps.google.com/maps/ms?vpsrc=6&amp;ctz=240&amp;ie=UTF8&amp;msa=0&amp;msid=208296092909134711469.0004af8b89ccf19cf64ee&amp;t=m&amp;ll=42.383148,-71.125145&amp;spn=0.088759,0.077248&amp;z=12&amp;source=embed" style="color:#0000FF;text-align:left">Meeting Halls</a> in a larger map</small></div>
+<div class="widget"><h3>Meeting Halls</h3>			<div class="textwidget"><iframe src="https://www.google.com/maps/d/embed?mid=13GAP1vyZlfTBd1AFRR6irQin97ogrwe-" width="225" height="350"></iframe><br/><small>View <a href="http://maps.google.com/maps/ms?vpsrc=6&amp;ctz=240&amp;ie=UTF8&amp;msa=0&amp;msid=208296092909134711469.0004af8b89ccf19cf64ee&amp;t=m&amp;ll=42.383148,-71.125145&amp;spn=0.088759,0.077248&amp;z=12&amp;source=embed" style="color:#0000FF;text-align:left">Meeting Halls</a> in a larger map</small></div>
 		</div> <!-- end .widget -->		
 </div> <!-- end #sidebar -->            </div><!-- .content_wrap --> 
         </div><!-- .content_wrap --> 
