Updated links on home page
Fixed broken links on buttons on home page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				   arrowLeft: 'a#prev-arrow',
 				   arrowRight: 'a#next-arrow',
 				   auto: false,
-				   autoSpeed: 5000,
+				   autoSpeed: 6000,
 				   slidePadding: '',
 				   pauseOnHover: true,
 				   fx: 'fade',
@@ -268,7 +268,7 @@ body.custom-background { background-color: #efe9d1; }
             <div class="banner">
             <h2>About Us</h2>
             The church in Cambridge, Massachusetts warmly welcomes you. We are believers in the Lord Jesus Christ who have personally received Him as our Savior. He is the most excellent and enjoyable Person. We love Him and endeavor to give Him the first place in all things. We rejoice to be cleansed by the blood of Jesus, God’s Son, born again of the Father’s divine life, and filled with the Holy...            <br class="clear"/>
-            <span><a href="page_id_2/">read more</a></span>
+            <span><a href="aboutus.html">read more</a></span>
             </div>
         </div><!-- .slide -->
                 <div class="slide ">
@@ -281,7 +281,7 @@ body.custom-background { background-color: #efe9d1; }
 Small-group life
 Gather with believers in your neighborhood for dinner, singing, Bible study, prayer, and daily fellowship. Dad, mom, the kids—everybody’s involved!
 Children’s...            <br class="clear"/>
-            <span><a href="page_id_18/">read more</a></span>
+            <span><a href="ourlife.html">read more</a></span>
             </div>
         </div><!-- .slide -->
                 <div class="slide ">
@@ -298,7 +298,7 @@ THE TRIUNE GOD
 God is uniquely one, yet a Trinity—the Father, the Son, and the Spirit.—1 Timothy 2:5, Matthew 28:19
 JESUS CHRIST
 The Son of God, even God Himself, was...            <br class="clear"/>
-            <span><a href="page_id_14/">read more</a></span>
+            <span><a href="belief.html">read more</a></span>
             </div>
         </div><!-- .slide -->
               </div><!-- #slides --> 
@@ -351,13 +351,13 @@ We hold the faith which is common to all believers. - Titus 1:4, Jude...      
             <p><strong>The church in Cambridge, Massachusetts warmly welcomes you. We are believers in the Lord Jesus Christ who have personally received Him as our Savior. He is the most excellent and enjoyable Person. We love Him and endeavor to give Him the first place in all things. We rejoice to be cleansed by the blood of Jesus, God’s Son, born again of the Father’s divine life, and filled with the Holy Spirit.</strong></p>
 <p><strong></strong></p>
             <br class="clear"/>
-            <span class="readmore"><a href="page_id_2/">read more</a></span>
+            <span class="readmore"><a href="aboutus.html">read more</a></span>
         </div>
         				                <div>
             <span class="titles">Our Life</span>
             <p><strong>We maintain a vibrant and active life. Whether you’re a growing family or a student, single or retired, we give you a place to live, grow, and serve as an indispensable member of Christ’s Body.</strong></p>
             <br class="clear"/>
-            <span class="readmore"><a href="page_id_18/">read more</a></span>
+            <span class="readmore"><a href="ourlife.html">read more</a></span>
         </div>
         				                <div>
             <span class="titles">Contact Us</span>
@@ -382,7 +382,7 @@ CONTACT INFO</span></h3>
 <p>&nbsp;</p>
 <h3 style="padding-left: 30px;"><span class="Apple-style-span" style="font-size: 13px; font-weight: normal;"></span></h3>
             <br class="clear"/>
-            <span class="readmore"><a href="page_id_21/">read more</a></span>
+            <span class="readmore"><a href="contactus.html">read more</a></span>
         </div>
         <br class="clear"/>
     </div>
@@ -455,7 +455,7 @@ CONTACT INFO</span></h3>
 			   arrowLeft: 'prevlink',
 			   arrowRight: 'nextlink',
 			   auto: false,
-			   autoSpeed: 6000			};
+			   autoSpeed: 100000			};
 			var options = $.extend(defaults, options);
 			return this.each(function()
 			{
